<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bote.MainActivity">

    <item
        android:id="@+id/action_select_map_position"
        android:orderInCategory="1"
        android:title="@string/action_select_map_position"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_map_position"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="2"
        android:title="@string/action_get_map_position"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send_position_contacts"
        android:orderInCategory="3"
        android:title="@string/action_send_position_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>